Update version, fix indent, and place access mode into a list

--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -128,7 +128,8 @@ spec:
   - metadata:
       name: data
     spec:
-      accessModes: {{ .Values.data.persistence.accessMode | quote }}
+      accessModes:
+        - {{ .Values.data.persistence.accessMode | quote }}
     {{- if .Values.data.persistence.storageClass }}
     {{- if (eq "-" .Values.data.persistence.storageClass) }}
       storageClassName: ""
