--- a/incubator/riemann/templates/service.yaml
+++ b/incubator/riemann/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "riemann.fullname" . }}
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "riemann.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -29,5 +29,5 @@ spec:
       name: riemann-websocket
       {{- end }}
   selector:
-    app: {{ template "name" . }}
+    app: {{ template "riemann.name" . }}
     release: {{ .Release.Name }}
