--- a/stable/traefik/templates/deployment.yaml
+++ b/stable/traefik/templates/deployment.yaml
@@ -73,6 +73,7 @@ spec:
         {{- end }}
         ports:
         - containerPort: 80
+        - containerPort: 84
         - containerPort: 443
         {{- if .Values.dashboard.enabled }}
         - containerPort: 8080
