--- a/incubator/ibm-blockchain-channel/Chart.yaml
+++ b/incubator/ibm-blockchain-channel/Chart.yaml
@@ -1,5 +1,6 @@
 name: ibm-blockchain-channel
 version: 1.0.0
+appVersion: 1.0.0
 description: IBM Blockchain Channel Chart
 keywords:
   - blockchain
@@ -7,11 +8,11 @@ home: https://ibm-blockchain.github.io
 sources:
   - https://github.ibm.com/IBM-Blockchain/ibm-container-service
 maintainers: 
-  - name: Mihir Shah
+  - name: mrshah-at-ibm
     email: mrshah@us.ibm.com
-  - name: Dhyey Shah
+  - name: dhyey20
     email: dbshah@us.ibm.com
-  - name: Eddie Allen
+  - name: eddie-at-ibm
     email: deallen@us.ibm.com
 engine: gotpl
 icon: https://www.ibm.com/blogs/bluemix/wp-content/uploads/2016/02/IBM_Blockchain_Hero.png
