--- a/incubator/istio/templates/custom-resources/custom-resources.yaml
+++ b/incubator/istio/templates/custom-resources/custom-resources.yaml
@@ -232,7 +232,7 @@ metadata:
 spec:
   metrics:
   - name: request_count
-    instance_name: requestcount.metric.istio-system
+    instance_name: requestcount.metric.{{ .Release.Namespace }}
     kind: COUNTER
     label_names:
     - source_service
@@ -241,7 +241,7 @@ spec:
     - destination_version
     - response_code
   - name: request_duration
-    instance_name: requestduration.metric.istio-system
+    instance_name: requestduration.metric.{{ .Release.Namespace }}
     kind: DISTRIBUTION
     label_names:
     - source_service
@@ -253,7 +253,7 @@ spec:
       explicit_buckets:
         bounds: [0.005, 0.01, 0.025, 0.05, 0.1, 0.25, 0.5, 1, 2.5, 5, 10]
   - name: request_size
-    instance_name: requestsize.metric.istio-system
+    instance_name: requestsize.metric.{{ .Release.Namespace }}
     kind: DISTRIBUTION
     label_names:
     - source_service
@@ -267,7 +267,7 @@ spec:
         scale: 1
         growthFactor: 10
   - name: response_size
-    instance_name: responsesize.metric.istio-system
+    instance_name: responsesize.metric.{{ .Release.Namespace }}
     kind: DISTRIBUTION
     label_names:
     - source_service
@@ -281,7 +281,7 @@ spec:
         scale: 1
         growthFactor: 10
   - name: tcp_bytes_sent
-    instance_name: tcpbytesent.metric.istio-system
+    instance_name: tcpbytesent.metric.{{ .Release.Namespace }}
     kind: COUNTER
     label_names:
     - source_service
@@ -289,7 +289,7 @@ spec:
     - destination_service
     - destination_version
   - name: tcp_bytes_received
-    instance_name: tcpbytereceived.metric.istio-system
+    instance_name: tcpbytereceived.metric.{{ .Release.Namespace }}
     kind: COUNTER
     label_names:
     - source_service
