--- a/stable/voyager/Chart.yaml
+++ b/stable/voyager/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 description: 'Voyager by AppsCode - Secure Ingress Controller for Kubernetes'
 icon: https://cdn.appscode.com/images/icon/voyager.png
 name: voyager
-version: 1.2.0
-appVersion: 3.2.1
+version: 2.0.0
+appVersion: 5.0.0-rc.3
 sources:
   - https://github.com/appscode/voyager
 maintainers:
