--- a/stable/voyager/templates/cluster-role.yaml
+++ b/stable/voyager/templates/cluster-role.yaml
@@ -2,18 +2,25 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "voyager.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: "{{ template "name" . }}"
+    app: "{{ template "voyager.name" . }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
 rules:
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - "*"
+- apiGroups:
   - extensions
   resources:
   - thirdpartyresources
-  verbs: ["get", "create", "list"]
+  verbs:
+  - "*"
 - apiGroups:
   - voyager.appscode.com
   resources: ["*"]
@@ -22,7 +29,12 @@ rules:
   - monitoring.coreos.com
   resources:
   - servicemonitors
-  verbs: ["get", "create", "update"]
+  verbs: ["get", "create", "update", "patch"]
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs: ["*"]
 - apiGroups:
   - extensions
   resources:
@@ -40,7 +52,7 @@ rules:
 - apiGroups: [""]
   resources:
   - secrets
-  verbs: ["get", "list", "watch", "create", "update"]
+  verbs: ["get", "list", "watch", "create", "update", "patch"]
 - apiGroups: [""]
   resources:
   - namespaces
@@ -52,7 +64,7 @@ rules:
 - apiGroups: [""]
   resources:
   - pods
-  verbs: ["list", "watch", "delete"]
+  verbs: ["list", "watch", "delete", "deletecollection"]
 - apiGroups: [""]
   resources:
   - nodes
@@ -60,10 +72,11 @@ rules:
 - apiGroups: [""]
   resources:
   - serviceaccounts
-  verbs: ["get", "create", "delete"]
-- apiGroups: ["rbac.authorization.k8s.io"]
+  verbs: ["get", "create", "delete", "patch"]
+- apiGroups:
+  - rbac.authorization.k8s.io
   resources:
-  - roles
   - rolebindings
-  verbs: ["get", "create", "delete"]
+  - roles
+  verbs: ["get", "create", "delete", "patch"]
 {{ end }}
