--- a/stable/voyager/templates/deployment.yaml
+++ b/stable/voyager/templates/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "voyager.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: "{{ template "name" . }}"
+    app: "{{ template "voyager.name" . }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
 spec:
@@ -12,22 +12,38 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ template "name" . }}"
+        app: "{{ template "voyager.name" . }}"
         release: "{{ .Release.Name }}"
+{{- if and .Values.criticalAddon (eq .Release.Namespace "kube-system") }}
+      annotations:
+        scheduler.alpha.kubernetes.io/critical-pod: ''
+{{- end }}
     spec:
-      serviceAccountName: {{ if .Values.rbac.create }}{{ template "fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "voyager.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
       containers:
       - name: operator
-        image: {{ .Values.image }}:{{ .Values.imageTag }}
+        image: {{ .Values.operator.image }}:{{ .Values.operator.imageTag }}
+        imagePullPolicy: {{ .Values.imagePullPolicy  }}
+        {{- if .Values.imagePullSecrets }}
+        imagePullSecrets:
+{{ toYaml .Values.imagePullSecrets | indent 8 }}
+        {{- end }}
         args:
         - run
         - --cloud-provider={{ .Values.cloudProvider }}
         - --cloud-config={{ .Values.cloudConfig }}
         - --v={{ .Values.logLevel }}
         - --rbac={{ .Values.rbac.create }}
+        - --ingress-class={{ .Values.ingressClass }}
+        - --operator-service={{ template "voyager.fullname" . }}
+        - --haproxy-image={{ .Values.haproxy.image }}:{{ .Values.haproxy.imageTag }}
+        - --exporter-sidecar-image={{ .Values.exporter.image }}:{{ .Values.exporter.imageTag }}
         ports:
         - containerPort: 56790
-          name: http
+          name: ops
+          protocol: TCP
+        - containerPort: 56791
+          name: acme
           protocol: TCP
 {{- if .Values.persistence.enabled }}
         volumeMounts:
@@ -39,7 +55,12 @@ spec:
             path: {{ .Values.persistence.hostPath | quote }}
           name: cloudconfig
 {{- end -}}
-    {{- if .Values.nodeSelector }}
+{{- if and .Values.criticalAddon (eq .Release.Namespace "kube-system") }}
+      tolerations:
+      - key: "CriticalAddonsOnly"
+        operator: "Exists"
+{{- end -}}
+{{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
 {{- end -}}
