--- a/stable/voyager/templates/service.yaml
+++ b/stable/voyager/templates/service.yaml
@@ -1,17 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "voyager.fullname" . }}
   labels:
-    app: "{{ template "name" . }}"
+    app: "{{ template "voyager.name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
   ports:
-  - name: http
+  - name: ops
     port: 56790
-    targetPort: http
+    targetPort: ops
+  - name: acme
+    port: 56791
+    targetPort: acme
   selector:
-    app: "{{ template "name" . }}"
+    app: "{{ template "voyager.name" . }}"
     release: "{{ .Release.Name }}"
