--- a/stable/stash/templates/cluster-role.yaml
+++ b/stable/stash/templates/cluster-role.yaml
@@ -1,42 +1,46 @@
-{{ if .Values.rbac.install }}
-{{- $serviceName := include "fullname" . -}}
-apiVersion: rbac.authorization.k8s.io/{{ required "A valid .Values.rbac.apiVersion entry required!" .Values.rbac.apiVersion }}
+{{ if .Values.rbac.create }}
+apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: {{ $serviceName }}
+  name: {{ template "stash.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: "{{ template "name" . }}"
+    app: "{{ template "stash.name" . }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
 rules:
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - "*"
+- apiGroups:
   - extensions
   resources:
   - thirdpartyresources
-  verbs: ["get", "create"]
+  verbs:
+  - "*"
 - apiGroups:
   - stash.appscode.com
-  resources:
-  - restics
+  resources: ["*"]
   verbs: ["*"]
 - apiGroups:
   - extensions
   resources:
-  - deployments
   - replicasets
   - daemonsets
-  verbs: ["list", "watch", "update"]
+  verbs: ["get", "list", "watch", "patch"]
 - apiGroups:
   - apps
   resources:
   - deployments
-  verbs: ["list", "watch", "update"]
+  verbs: ["get", "list", "watch", "patch"]
 - apiGroups: [""]
   resources:
   - namespaces
   - replicationcontrollers
-  verbs: ["list", "watch", "update"]
+  verbs: ["get", "list", "watch", "patch"]
 - apiGroups: [""]
   resources:
   - secrets
@@ -49,4 +53,9 @@ rules:
   resources:
   - pods
   verbs: ["list", delete"]
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - rolebindings
+  verbs: ["get", "create", "delete", "patch"]
 {{ end }}
