--- a/stable/stash/templates/deployment.yaml
+++ b/stable/stash/templates/deployment.yaml
@@ -1,10 +1,10 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "stash.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: "{{ template "name" . }}"
+    app: "{{ template "stash.name" . }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
 spec:
@@ -12,18 +12,25 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ template "name" . }}"
+        app: "{{ template "stash.name" . }}"
         release: "{{ .Release.Name }}"
-    spec:
-{{- if .Values.rbac.install }}
-      serviceAccountName: {{ template "fullname" . }}
+{{- if and .Values.criticalAddon (eq .Release.Namespace "kube-system") }}
+      annotations:
+        scheduler.alpha.kubernetes.io/critical-pod: ''
 {{- end }}
+    spec:
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "stash.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
       containers:
       - args:
         - run
         - --v=3
-        image: '{{ .Values.operator.image }}:{{ .Values.operator.tag }}'
-        imagePullPolicy: '{{ .Values.operator.pullPolicy }}'
+        - --rbac={{ .Values.rbac.create }}
+        image: {{ .Values.operator.image }}:{{ .Values.operator.tag }}
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        {{- if .Values.imagePullSecrets }}
+        imagePullSecrets:
+{{ toYaml .Values.imagePullSecrets | indent 8 }}
+        {{- end }}
         name: operator
         ports:
         - containerPort: 56790
@@ -34,7 +41,11 @@ spec:
         - -web.listen-address=:56789
         - -persistence.file=/var/pv/pushgateway.dat
         image: '{{ .Values.pushgateway.image }}:{{ .Values.pushgateway.tag }}'
-        imagePullPolicy: '{{ .Values.pushgateway.pullPolicy }}'
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        {{- if .Values.imagePullSecrets }}
+        imagePullSecrets:
+{{ toYaml .Values.imagePullSecrets | indent 8 }}
+        {{- end }}
         name: pushgateway
         ports:
         - containerPort: 56789
@@ -51,3 +62,8 @@ spec:
           name: data-volume
         - emptyDir: {}
           name: stash-scratchdir
+{{- if and .Values.criticalAddon (eq .Release.Namespace "kube-system") }}
+      tolerations:
+      - key: "CriticalAddonsOnly"
+        operator: "Exists"
+{{- end -}}
