--- a/stable/verdaccio/Chart.yaml
+++ b/stable/verdaccio/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 description: A lightweight private npm proxy registry (sinopia fork)
 name: verdaccio
 version: 0.1.0
+appVersion: 2.6.5
 sources:
 - http://www.verdaccio.org
 maintainers:
