Add suport for prometheus 2.0
Most changes are in the configmap due to the new rules format and the
different method of setting the alertmanager target.

Migration notes: https://prometheus.io/docs/prometheus/latest/migration/

--- a/stable/prometheus/templates/server-configmap.yaml
+++ b/stable/prometheus/templates/server-configmap.yaml
@@ -10,5 +10,20 @@ metadata:
     release: {{ .Release.Name }}
   name: {{ template "prometheus.server.fullname" . }}
 data:
-{{ toYaml .Values.serverFiles | indent 2 }}
-{{- end }}
+{{- $alertmanagerHostname := include "prometheus.alertmanager.hostname" . -}}
+{{- $root := . -}}
+{{- range $key, $value := .Values.serverFiles }}
+  {{ $key }}: |
+{{ toYaml $value | default "{}" | indent 4 }}
+{{- if eq $key "prometheus.yml" -}}
+{{- if $alertmanagerHostname -}}
+    alerting:
+      alertmanagers:
+      - path_prefix: {{ $root.Values.alertmanager.baseURL }}
+        static_configs:
+        - targets:
+          - {{ $alertmanagerHostname }}
+{{- end -}}
+{{- end -}}
+{{- end -}}
+{{- end -}}
