--- a/incubator/jaeger/templates/query-deploy.yaml
+++ b/incubator/jaeger/templates/query-deploy.yaml
@@ -41,8 +41,21 @@ spec:
 {{ toYaml .Values.query.resources | indent 10 }}
         command:
         - "/go/bin/query-linux"
+{{ if not (empty .Values.elasticsearch.config.host) }}
+        - "--span-storage.type=elasticsearch"
+        - "--es.server-urls={{ .Values.elasticsearch.config.host }}"
+        - "--es.username={{ .Values.elasticsearch.config.username }}"
+        - "--es.password={{ .Values.elasticsearch.config.password }}"
+{{ else if .Values.tags.elasticsearch }}
+        - "--span-storage.type=elasticsearch"
+        - "--es.server-urls=http://{{ template "elasticsearch.fullname" . }}-client:9200"
+{{ else if not (empty .Values.cassandra.config.host) }}
+        - "--cassandra.servers={{ .Values.cassandra.config.host }}"
+        - "--cassandra.keyspace=jaeger_v1_{{ .Values.cassandra.config.dc_name }}"
+{{ else }}
         - "--cassandra.servers={{ template "cassandra.fullname" . }}"
         - "--cassandra.keyspace=jaeger_v1_{{ .Values.cassandra.config.dc_name }}"
+{{ end }}
         - "--query.static-files=/go/jaeger-ui/"
 {{- range $key, $value := .Values.query.cmdlineParams }}
         - "{{ $value }}"
