--- a/stable/postgresql/values.yaml
+++ b/stable/postgresql/values.yaml
@@ -99,3 +99,4 @@ networkPolicy:
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
 nodeSelector: {}
 tolerations: []
+affinity: {}
