--- a/stable/lamp/templates/pvc.yaml
+++ b/stable/lamp/templates/pvc.yaml
@@ -8,10 +8,6 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-  {{- if .Values.persistence.storageClass }}
-  annotations:
-    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.storageClass | quote }}
-  {{- end }}
   {{- if .Values.persistence.keep }}
     helm.sh/resource-policy: keep
   {{- end }}
@@ -21,4 +17,11 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.size | quote }}
+{{- if .Values.persistence.storageClass }}
+{{- if (eq "-" .Values.persistence.storageClass) }}
+  storageClassName: ""
+{{- else }}
+  storageClassName: "{{ .Values.persistence.storageClass }}"
+{{- end }}
+{{- end }}
 {{- end -}}
