--- a/stable/lamp/values.yaml
+++ b/stable/lamp/values.yaml
@@ -132,7 +132,15 @@ persistence:
 
   accessMode: ReadWriteOnce
   size: 5Gi
-  #storageClass: ssd
+
+  ## If defined, storageClassName: <storageClass>
+  ## If set to "-", storageClassName: "", which disables dynamic provisioning
+  ## If undefined (the default) or set to null, no storageClassName spec is
+  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+  ##   GKE, AWS & OpenStack)
+  ##
+  # storageClass: "-"
+
   #hostPath:
 
 
