--- a/incubator/couchdb/templates/statefulset.yaml
+++ b/incubator/couchdb/templates/statefulset.yaml
@@ -14,6 +14,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "couchdb.name" . }}
+      release: {{ .Release.Name }}
   template:
     metadata:
       labels:
